--- a/app/src/main/res/layout/item_envanter_card_selectable.xml
+++ b/app/src/main/res/layout/item_envanter_card_selectable.xml
@@ -110,6 +110,7 @@
             android:paddingStart="5dp"
             android:textAllCaps="false"
             android:text="Resim"
+            android:onClick="@{(view)->activity.goImageListFragment(viewModel.envanter)}"
             android:textColor="@color/colorWhite"
             android:textSize="8sp"
             app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
