--- a/app/src/main/res/layout/fragment_tif_transfer.xml
+++ b/app/src/main/res/layout/fragment_tif_transfer.xml
@@ -34,6 +34,7 @@
                 android:layout_height="@dimen/editTextHeight"
                 android:background="@drawable/bg_edittext"
                 android:hint="İşlem Tarihi"
+                android:translationY="@dimen/translationY"
                 android:text="@={viewModel.islemTarihi}" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,7 +96,7 @@
         
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilAciklama"
+            android:id="@+id/tilDigerKayittanDusmeNedeni"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -108,6 +109,7 @@
                 android:layout_height="@dimen/editTextAciklamaHeight"
                 android:background="@drawable/bg_edittext"
                 android:hint="Açıklama"
+                android:translationY="@dimen/translationY"
                 android:text="@={viewModel.aciklama}" />
         </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
