--- a/app/src/main/res/layout/item_photo_card.xml
+++ b/app/src/main/res/layout/item_photo_card.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/cardViewChapture"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_image_add_button" />
+            app:srcCompat="@mipmap/picture" />
 
 
     </androidx.cardview.widget.CardView>
