--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,5 +26,11 @@
         <item name="android:paddingRight">@dimen/input_label_horizontal_spacing</item>
     </style>
 
+    <style name="HintTextStyle" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">26sp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:paddingBottom">20dp</item>
+    </style>
+
 
 </resources>
