--- a/app/src/main/res/layout/fragment_tif_hibe.xml
+++ b/app/src/main/res/layout/fragment_tif_hibe.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:hint="*Muhatap"
+            app:error="@{viewModel.error}"
             app:layout_constraintEnd_toEndOf="@+id/tilIslemTarihi"
             app:layout_constraintStart_toStartOf="@+id/tilIslemTarihi"
             app:layout_constraintTop_toBottomOf="@+id/tilIslemTarihi">
