--- a/app/src/main/res/layout/fragment_tif_zimmet_devri.xml
+++ b/app/src/main/res/layout/fragment_tif_zimmet_devri.xml
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:hint="Devir Yapılacak Personel"
+            app:hint="*Devir Yapılacak Personel"
             app:layout_constraintEnd_toEndOf="@+id/tilIslemTarihi"
             app:layout_constraintStart_toStartOf="@+id/tilIslemTarihi"
             app:layout_constraintTop_toBottomOf="@+id/tilIslemTarihi">
